--- a/Angular/orbit-report/angular.json
+++ b/Angular/orbit-report/angular.json
@@ -120,8 +120,5 @@
       }
     }
   },
-  "defaultProject": "orbit-report",
-  "cli": {
-    "analytics": "7fc3b61e-8458-42e1-8e47-9b38655ae3ce"
-  }
+  "defaultProject": "orbit-report"
 }
